# ethers-rs-mobile

./: Cargo.toml
.github/workflows/: npm-release.yml
ethers-core/: Cargo.toml
ethers-ffi/: .gitignore  Cargo.toml  Makefile  cbindgen.toml  module.modulemap
ethers-ffi/ethers-rs-mobile/: EthersRS.podspec  package.json
ethers-ffi/src/: lib.rs
ethers-ffi/src/android/: EthersRs.kt  RnEthersRs.kt
ethers-signers/: Cargo.toml
ethers-solc/: Cargo.toml
